# torchfunsor

./: .gitignore  Makefile  pyproject.toml
funsor/: __init__.py  terms.py
funsor/utilities/: testing.py
scripts/: update_headers.py
tests/: test_terms.py
